fix(style): ordered list markers now always visible
Due to the default list-style-position: outside, list markers would extend
to the left of the elgg-body content and be cut off due to the way that
element is layed out. Here we change the model to inside position.

Fixes #7206

--- a/mod/ckeditor/views/default/css/elgg/wysiwyg.css
+++ b/mod/ckeditor/views/default/css/elgg/wysiwyg.css
@@ -22,6 +22,8 @@ ul {
 }
 ol {
 	list-style-type: decimal;
+	list-style-position: inside;
+	padding-left: .4em;
 }
 table {
 	border: 1px solid #ccc;
